Refactor deleteCategory and renameCategory methods in CategoryController