@@ -2,7 +2,6 @@ package repositories;
 
 import java.util.ArrayList;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import models.Task;
 import utils.DataBaseConnection;
 import utils.UserLogin;
@@ -18,7 +17,7 @@ public class TaskRepository extends DataBaseRepositoryImpl implements IRepositor
     return (ArrayList<Task>)
         this.connection.getTasks().stream()
             .filter(t -> t.getUser().equals(UserLogin.getUser()))
-            .collect(Collectors.toList());
+            .toList();
   }
 
   @Override
